@@ -6,6 +6,7 @@ Changelog for getTables.
 - Обновление класса при обновлении строки.
 - Горячие клавиши на action.
 - Закрепить шапку в документе и заголовки в таблице.
+- Фулконтент в ячейках таблицы. table.settings.fullcontent
 
 1.11.4-alpha
 - Адаптация под modx3(3.0.1) и pdoTools3.
